--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <H1>I'm<br>Asad Manzoor</H1>
-        <p>a <span class="line-pro">pro</span>grammer</p>
+        <p>a <span class="line-pro">web</span> developer</p>
         <img class="bottom-cloud" class src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
