--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <div class="skill-row">
             <img class="Gamer" src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif" alt="gif gamer">
-            <h3>Gamer</h3>
+            <h3>Pc Gamer</h3>
             <p>I'm a type of a gamer how play games all day and night</p>
           </div>
         </div>
